# sporepath

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Install-Sporepath-Queue-Worker-Task.bat  LICENSE  Launch-ArcRift-Chrome.bat  Launch-ArcRift-Logged-In-Chrome.bat  README.md  README.zh-TW.md  Run-Sporepath-Auto.ps1  Run-Sporepath-Queue-Worker.bat  Run-Sporepath-Qwen17-Eval.bat  Run-Sporepath-Qwen35-Eval.bat  Run-Sporepath-Sources-Watcher.bat  Run-Sporepath-Watcher.bat  Sporepath-Auto.bat  Sporepath.bat  Start-ArcRift.bat  Uninstall-Sporepath-Queue-Worker-Task.bat  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: extraction_quality.md  feature_request.md  graph_behavior.md
.github/workflows/: tests.yml
examples/: sample_chat.jsonl
src/latent_brain/: __init__.py  cli.py  codex_adapter.py  graph_export.py  ingest.py  models.py  store.py
src/sporepath/: __init__.py  app.py  app_config.py  arcrift_import.py  automation.py  cli.py  codex_adapter.py  digest_queue.py  evaluation.py  extractors.py  fragment_filter.py  graph_export.py  ingest.py  models.py  notes.py  refresh.py  source_discovery.py  source_watch.py  store.py  validation.py  vault_export.py
tests/: test_app_config.py  test_app_ui.py  test_arcrift_auto.py  test_arcrift_import.py  test_cli.py  test_codex_adapter.py  test_digest_queue.py  test_evaluation.py  test_extractors.py  test_fragment_filter.py  test_graph.py  test_ingest.py  test_launchers.py  test_metabolism.py  test_notes.py  test_refresh.py  test_source_discovery.py  test_source_watch.py  test_sporepath_entrypoint.py  test_validation.py  test_vault_export.py
