[project]
name = "latent-brain-poc"
version = "0.1.0"
description = "Local-first PoC for metabolizing AI chat history into focus and latent inspiration paths."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = { text = "MIT" }
keywords = ["ai", "memory", "second-brain", "ollama", "sqlite", "knowledge-graph"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.scripts]
latent-brain = "latent_brain.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
